<resources>
    <string name="app_name">Imovin</string>
    <string name="ok">Ok</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="reset_pwd_title">Email has been sent</string>
    <string name="reset_pwd_text">Please check your email and click the link to reset password</string>
    <string name="login_email_title">Email</string>
    <string name="login_password_title">Password</string>
    <string name="login_btn_title">Login</string>
    <string name="reset_password_btn_title">Reset Password</string>
    <string name="forgot_password_title">Forgot Password</string>
    <string name="return_to_login_title">Return To Login</string>
    <string name="hint_email">name@email.com</string>
    <string name="hint_password">********</string>
    <string name="name">name : </string>
    <string name="sign_title">please sign your signature below</string>
    <string name="agree">Agree</string>
    <string name="disagree">Disagree</string>
    <string name="next">Next</string>
    <string name="prev">Prev</string>
    <string name="continue_text">Continue</string>
    <string name="very_disagree">Strongly Disagree</string>
    <string name="very_agree">Strongly Agree</string>
    <string name="rate1">1</string>
    <string name="rate2">2</string>
    <string name="rate3">3</string>
    <string name="rate4">4</string>
    <string name="rate5">5</string>
    <string name="other">other</string>
    <string name="name_empty_alert">name cannot be empty</string>
    <string name="signature_empty_alert">signature cannot be empty</string>
    <string name="question_mark">\?</string>
    <string name="steps">Steps</string>
    <string name="active_minutes">Active Minutes</string>
    <string name="cal">Cal</string>
    <string name="min">Min</string>
    <string name="kilometer">KM</string>
    <string name="calories">Calories</string>
    <string name="duration">Duration</string>
    <string name="distance">Distance</string>
    <string name="change_plan">Change Plan</string>
    <string name="new_custom">New Custom</string>
    <string name="warning_text">Keep Moving!</string>
    <string name="encourage_text">You seem to be missing your goal. Try to make time for a walk!</string>
    <string name="daily_goal_text">Daily Goal :</string>
    <string name="weekly_goal_text">Weekly Goal :</string>
    <string name="forum_topics">Forum topics</string>
    <string name="social_topics">Social topics</string>
    <string name="comments_topics_single">Comment</string>
    <string name="comments_topics">Comments</string>
    <string name="new_thread">New Thread</string>
    <string name="forum">Forum</string>
    <string name="post">Post</string>
    <string name="add">Add</string>
    <string name="edit">Edit</string>
    <string name="close">Close</string>
    <string name="return_text">Return</string>
    <string name="upload_photo">Upload Photo</string>
    <string name="new_thread_title_hint">Enter thread title...</string>
    <string name="new_thread_message_hint">Enter thread message...</string>
    <string name="thread_delete_title">Delete Thread</string>
    <string name="thread_delete_confirmation">Confirm Deletion?</string>
    <string name="post_a_comment">Post a comment</string>
    <string name="cancel">Cancel</string>
    <string name="enter_comment_here">Enter comment here...</string>
    <string name="comment_delete_title">Delete Comment</string>
    <string name="comment_delete_confirmation">Confirm Deletion?</string>
    <string name="default_plans">Default Plans</string>
    <string name="custom_plans">Custom Plans</string>
    <string name="hint_add_plan">Enter Plan Name</string>
    <string name="challenge">CHALLENGE:</string>
    <string name="ending">Ending:</string>
    <string name="next_season">Next Season:</string>
    <string name="total_points">Total Points:</string>
    <string name="daily_steps">Daily Steps</string>
    <string name="total_distance">Total Distance (km)</string>
    <string name="total_days_with_7500_steps">Total days with > 7500 steps</string>
    <string name="active_days_for_week">Active days for the week</string>
    <string name="weekly_exercise_duration">Weekly exercise duration</string>
    <string name="earned">Earned</string>
    <string name="pre_season">Pre-Season</string>
    <string name="weekly_ranking">Weekly Ranking</string>
    <string name="rank_by_total_points">Rank by total points:</string>
    <string name="rank_by_total_steps">Rank by total steps:</string>
    <string name="total">Total :</string>
    <string name="points">Points</string>
    <string name="to_next_reward">To Next Reward:</string>
    <string name="available_rewards">Available Rewards</string>
    <string name="redeem">Redeem</string>
    <string name="checkout">Checkout</string>
    <string name="confirm">Confirm</string>
    <string name="confirm_redemption">Confirm Redemption?</string>
    <string name="collection_venue">Collection Venue</string>
    <string name="choose_collection_time">Choose Collection Time</string>
    <string name="collection">Collection</string>
    <string name="redemption_complete">Redemption Complete!</string>
    <string name="redemption_complete_text1">A confirmation email has been sent.</string>
    <string name="redemption_complete_text2">You did well for this season, great job!</string>
    <string name="left">Left</string>
    <string name="reward_add_on">* Every 100 Steps = 1 Point</string>
    <string name="all_redeemed_message1">All rewards redeemed</string>
    <string name="all_redeemed_message2">Check back soon!</string>
    <string name="no_message">There is no message for now</string>
    <string name="no_item_selected_message">Must select at least one item</string>
    <string name="select_checkout_message">Must select venue and time</string>
    <string name="january">JAN</string>
    <string name="february">FEB</string>
    <string name="cf_title1">Study on Physical Activity Mobile App</string>
    <string name="cf_title2">School of Computing</string>
    <string name="cf_title3">Department of Information Systems and Analytics</string>
    <string name="cf_title4">CNSENT FORM (CF)</string>
    <string name="cf_content_title1">Project title: A Personalized Technology-Based Intervention for Physical Activity</string>
    <string name="cf_content_title2">Principal Investigator</string>
    <string name="cf_content_2_1">Professor TEO Hock Hai, Provost\'s Chair Professor</string>
    <string name="cf_content_2_2">Department of Information Systems and Analytics,</string>
    <string name="cf_content_2_3">School of Computing, National University of Singapore (NUS)</string>
    <string name="cf_content_2_4">+65 6516 2979 Email: teohh@comp.nus.edu.sg</string>
    <string name="cf_content_title3">Co-Investigators</string>
    <string name="cf_content_3_1">Dr.TAN Swee Lin, Sharon, Senior Lecturer, Department of Information Systems and Analytics,</string>
    <string name="cf_content_3_2">School of Computing, National University of Singapore (NUS)</string>
    <string name="cf_content_3_3">Phone: +65 6516 4866 Email: tansl@comp.nus.edu.sg</string>
    <string name="cf_content_3_4">ONG Zhi Quan, Ph.D. Candidate, Department of Information Systems and Analytics,</string>
    <string name="cf_content_3_5">School of Computing, National University of Singapore (NUS)</string>
    <string name="cf_content_3_6">Phone: +65 6516 7098 Email: zqong@comp.nus.edu.sg</string>
    <string name="cf_content_title4">I hereby acknowledge that: </string>
    <string name="cf_content_4_1">1. I have agreed to take part in the above study.</string>
    <string name="cf_content_4_2">
        2. I have received a copy of this information sheet (PIS) that explains the use of my data and results in this study.
        I understand its contents and agree to donate my data for the use of this study.
        I understand that the wireless activity tracker\'s manufacturer will have access to my physical activity data.</string>
    <string name="cf_content_4_3">
        3. I can withdraw from the study at any point of time by informing the Principal Investigator and all my data will be discarded.
    </string>
    <string name="cf_content_4_4">
        4. I will not have any financial benefits that result from this study
    </string>
    <string name="cf_content_4_5">
        5. I understand that my personal data will be discarded upon completion of this research.
        However, my anonymised data may be used in future stages of the research.
    </string>
    <string name="cf_content_4_6">
        6. I will be responsible for providing due care and security for any loaned devices(if applicable) until it is returned to the research team at the end of this study.
        If I damage/misplace the wireless activity tracker, a replace tracker will be issued to me and I will not receive reimbursement.
        I understand that for repeat damages/misplacements, I will be dropped from the study and I will forfeit all reimbursements.
    </string>
    <string name="qn_title">
        Study on Physical Activity Mobile App
    </string>
    <string name="qn_content_1">
        Dear participant,
    </string>
    <string name="qn_content_2">
        Thank you for your informed consent to participate in the study involving the use of the physical activity mobile app.
    </string>
    <string name="qn_content_3">
        We estimate that the following survey questionnaire will require 30 minutes to complete. There are no known risks of completing the survey. To receive reimbursement, you need to complete this questionnaire (i.e. all questions must be answered). Please answer all questions as honestly as possible.
    </string>
    <string name="qn_content_4">
        Your identity and responses for this questionnaire will remain confidential and anonymous. We have taken all reasonable measures to protect your identity and responses. The questions in the questionnaire do not ask you to reveal any personally identifying information aside from your email address (ideally your NUSNET email) and matriculation number. Your email address will be kept for matching purposes only, and your matriculation number is obtained for administrative purposes as we will loan you a physical activity tracker. Additionally, your responses will be digitally coded and stored in a private password-protected server hosted at NUS School of Computing. It will be accessed by only authorized research staff. Personal data will be discarded upon completion of this research. Aggregated data collected from this questionnaire will be used to help us understand the effect of the mobile app that is used in this study.
    </string>
    <string name="qn_content_5">
        If you require additional information or have questions, feel free to contact us using the emails listed in your Participant Information Sheet (PIS).
    </string>
    <string name="qn_content_6">
        If you are not satisfied with the conduct of the study, you may report (anonymously if you wish) to a staff member of the National University of Singapore Institutional Review Board (IRB) (Attn: Dr. Chan Tuck Wai, at telephone 6516 1234 or email at irb@nus.edu.sg).
    </string>
    <string name="qn_content_7">
        Thank you.
    </string>
    <string name="qn_content_8">
        Sincerely Yours
    </string>
    <string name="qn_content_9">
        PRINCIPAL INVESTIGATOR
    </string>
    <string name="qn_content_10">
        CO-INVESTIGATORS
    </string>
    <string name="submission_confirmed_text_1">
        Thank you for completing the survey questionnaire!
    </string>
    <string name="submission_confirmed_text_2">
        Kindly not that the features of iMovin\' may change depanding on your submitted reponse to this questionnaire.
    </string>
    <string name="submission_confirmed_text_3">
        Let\'s move on to iMovin!
    </string>
</resources>