<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Activities.QuestionnaireDocActivity">

    <ScrollView
        android:id="@+id/questionnaire_form"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="20dp">

            <TextView
                android:text="@string/qn_title"
                style="@style/CF_bold_title_big"/>

            <TextView
                android:layout_marginTop="10dp"
                android:text="@string/qn_content_1"
                style="@style/CF_content"/>

            <TextView
                android:layout_marginTop="10dp"
                android:text="@string/qn_content_2"
                style="@style/CF_content"/>

            <TextView
                android:layout_marginTop="10dp"
                android:text="@string/qn_content_3"
                style="@style/CF_content"/>

            <TextView
                android:layout_marginTop="10dp"
                android:text="@string/qn_content_4"
                style="@style/CF_content"/>

            <TextView
                android:layout_marginTop="10dp"
                android:text="@string/qn_content_5"
                style="@style/CF_content"/>

            <TextView
                android:layout_marginTop="10dp"
                android:text="@string/qn_content_6"
                style="@style/CF_content"/>

            <TextView
                android:layout_marginTop="10dp"
                android:text="@string/qn_content_7"
                style="@style/CF_content"/>

            <TextView
                android:layout_marginTop="10dp"
                android:text="@string/qn_content_8"
                style="@style/CF_content"/>

            <TextView
                android:layout_marginTop="10dp"
                android:text="@string/qn_content_9"
                style="@style/CF_content"/>

            <TextView
                android:text="@string/qn_content_10"
                style="@style/CF_content"/>

        </LinearLayout>

    </ScrollView>

    <include layout="@layout/consent_doc_bottom_layout"/>

</LinearLayout>