<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Activities.LoginActivity">

    <RelativeLayout
        android:id="@+id/mainView"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:id="@+id/layout_container"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="15dp"
            android:gravity="center">

            <ImageView
                android:id="@+id/imovin_image"
                android:src="@drawable/imovin_big"
                android:layout_marginTop="@dimen/LoginComponentMarginTop"
                android:scaleType="center"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <TextView
                android:text="@string/login_email_title"
                style="@style/LoginTitleStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <EditText
                android:id="@+id/email_input"
                android:hint="@string/hint_email"
                style="@style/LoginInputStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <TextView
                android:text="@string/login_password_title"
                style="@style/LoginTitleStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <EditText
                android:id="@+id/password_input"
                android:hint="@string/hint_password"
                android:inputType="textPassword"
                style="@style/LoginInputStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <Button
                android:id="@+id/oauthBtn"
                android:text="@string/login_btn_title"
                style="@style/buttonStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

        </LinearLayout>

    </ScrollView>

    </RelativeLayout>

</android.support.constraint.ConstraintLayout>