<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".Activities.QuestionnaireSummaryActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="20dp">

            <TextView
                android:text="@string/submission_confirmed_text_1"
                style="@style/QS_content" />

            <TextView
                android:layout_marginTop="10dp"
                android:text="@string/submission_confirmed_text_2"
                style="@style/QS_content" />

            <TextView
                android:layout_marginTop="10dp"
                android:text="@string/submission_confirmed_text_3"
                style="@style/QS_content" />

        </LinearLayout>

    </ScrollView>

    <include layout="@layout/question_summary_bottom_layout"/>

</LinearLayout>