<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center_horizontal"
    android:padding="@dimen/rewardPadding">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:weightSum="4"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="horizontal"/>

        <TextView
            android:id="@+id/points"
            android:text="0"
            android:textColor="@color/black_color"
            android:textSize="@dimen/textSubBig"
            android:layout_marginTop="@dimen/rewardMarginTop"
            android:gravity="center"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"/>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/question_mark"
                android:text="@string/question_mark"
                android:layout_height="match_parent"
                android:layout_width="match_parent"
                android:gravity="center"
                android:background="@drawable/theme_circle_border_blackground_black"
                android:singleLine="true"
                android:textColor="@drawable/reward_question_text_color"
                android:textSize="@dimen/questionNavigatorTextSmall" />

        </LinearLayout>

    </LinearLayout>

    <TextView
        android:text="@string/points"
        android:textColor="@color/black_color"
        android:textSize="@dimen/textSubMid"
        android:gravity="center"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/rewardMarginTop"/>

    <ProgressBar
        style="?android:attr/progressBarStyleHorizontal"
        android:id="@+id/reward_progress_bar"
        android:layout_marginTop="@dimen/rewardMarginTop"
        android:layout_marginLeft="@dimen/rewardPadding"
        android:layout_marginRight="@dimen/rewardPadding"
        android:layout_gravity="center_horizontal"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:max="100"
        android:progress="0"
        android:progressTint="@color/theme_purple"/>

    <TextView
        android:id="@+id/next_redeem_guide_text"
        android:text="@string/to_next_reward"
        android:textColor="@color/black_color"
        android:textSize="@dimen/textSubMid"
        android:gravity="center"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/rewardMarginTop"/>

    <TextView
        android:text="@string/available_rewards"
        android:textColor="@color/theme_purple"
        android:textSize="@dimen/textSubBig"
        android:gravity="center"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/rewardMarginTop"/>

    <android.support.v7.widget.RecyclerView
        android:id="@+id/reward_list"
        android:layout_marginTop="@dimen/rewardMarginTop"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"/>

    <LinearLayout
        android:id="@+id/all_redeemed_message_container"
        android:visibility="gone"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="vertical"
        android:gravity="center">

        <TextView
            android:text="@string/all_redeemed_message1"
            android:textColor="@color/black_color"
            android:textSize="@dimen/textSubBig"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"/>

        <TextView
            android:text="@string/all_redeemed_message2"
            android:textColor="@color/black_color"
            android:textSize="@dimen/textSubMid"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"/>

    </LinearLayout>

    <Button
        android:id="@+id/redeem_btn"
        android:text="@string/redeem"
        style="@style/buttonStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0" />

</LinearLayout>