<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="50dp"
    android:background="#88222222"
    android:id="@+id/mainView"
    tools:context=".Activities.RewardsRedeemSuccessActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/white_background_with_corner"
        android:layout_centerInParent="true"
        android:gravity="center_horizontal"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/rewardPadding"
            android:gravity="center_horizontal"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/icon"
                android:src="@drawable/gift_redeemed"
                android:scaleType="centerInside"
                android:layout_width="@dimen/rewardImageSizeBig"
                android:layout_height="@dimen/rewardImageSizeBig"/>

            <TextView
                android:text="@string/redemption_complete"
                android:textColor="@color/theme_purple"
                android:textSize="@dimen/textSubBig"
                android:layout_marginTop="@dimen/rewardMarginTop"
                android:gravity="center"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <TextView
                android:layout_marginTop="@dimen/rewardMarginTop"
                android:text="@string/redemption_complete_text1"
                android:textColor="@color/black_color"
                android:textSize="@dimen/textSubMid"
                android:gravity="center"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

            <TextView
                android:layout_marginTop="@dimen/rewardMarginTop"
                android:text="@string/redemption_complete_text2"
                android:textColor="@color/black_color"
                android:textSize="@dimen/textSubMid"
                android:gravity="center"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

        </LinearLayout>

        <Button
            android:id="@+id/close_btn"
            android:text="@string/close"
            style="@style/buttonStyleNoSpace"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

    </LinearLayout>

</RelativeLayout>