<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Fragments.ChallengeFragment">

    <LinearLayout
        android:gravity="top|center_horizontal"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:gravity="center"
            android:orientation="horizontal"
            android:padding="10dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/points_title"
                android:text="@string/total_points"
                android:textColor="@color/black_color"
                android:textSize="@dimen/textSubBig"
                android:gravity="center"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <TextView
                android:id="@+id/points_number"
                android:textColor="@color/theme_purple"
                android:textSize="@dimen/textSubBig"
                android:gravity="center"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

        </LinearLayout>

        <TextView
            android:id="@+id/rank_text"
            android:layout_marginTop="20dp"
            android:textColor="@color/black_color"
            android:textSize="@dimen/textSubMid"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <TextView
            android:id="@+id/daily_steps_title"
            android:visibility="gone"
            android:layout_marginTop="20dp"
            android:textColor="@color/black_color"
            android:text="@string/daily_steps"
            android:textSize="@dimen/textSubMid"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <android.support.v7.widget.RecyclerView
            android:id="@+id/daily_step_list"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <TextView
            android:id="@+id/daily_distance_title"
            android:visibility="gone"
            android:layout_marginTop="20dp"
            android:textColor="@color/black_color"
            android:text="@string/total_distance"
            android:textSize="@dimen/textSubMid"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <android.support.v7.widget.RecyclerView
            android:id="@+id/daily_distance_list"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <TextView
            android:id="@+id/step_target_title"
            android:visibility="gone"
            android:layout_marginTop="20dp"
            android:textColor="@color/black_color"
            android:text="@string/total_days_with_7500_steps"
            android:textSize="@dimen/textSubMid"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <android.support.v7.widget.RecyclerView
            android:id="@+id/steps_target_list"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <TextView
            android:id="@+id/active_days_title"
            android:visibility="gone"
            android:layout_marginTop="20dp"
            android:textColor="@color/black_color"
            android:text="@string/active_days_for_week"
            android:textSize="@dimen/textSubMid"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <android.support.v7.widget.RecyclerView
            android:id="@+id/active_days_list"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <TextView
            android:id="@+id/weekly_ex_title"
            android:visibility="gone"
            android:layout_marginTop="20dp"
            android:textColor="@color/black_color"
            android:text="@string/weekly_exercise_duration"
            android:textSize="@dimen/textSubMid"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <android.support.v7.widget.RecyclerView
            android:id="@+id/weekly_ex_list"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

    </LinearLayout>

</android.support.v4.widget.NestedScrollView>